# AI-PoweredTrademark-Risk-Assessment-

./: Frontend.py  Methodology.md  README.md  api.py  main_local_test.py  pyproject.toml
src/embeddings/: model.py
src/rag/: generate_answer.py  input_adapter.py  risk_engine.py
src/vectorstore/: weaviate_client.py  weaviate_loader.py  weaviate_search.py
